--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "frameguard": "^3.1.0"
+    "frameguard": "^3.1.0",
+    "nodemailer": "^6.4.17"
   }
 }
