--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "frameguard": "^3.1.0",
-    "nodemailer": "^6.4.17"
+    "fs": "0.0.1-security",
+    "nodemailer": "^6.4.17",
+    "path": "^0.12.7"
   }
 }
