--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "frameguard": "^3.1.0",
     "fs": "0.0.1-security",
     "nodemailer": "^6.4.17",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "ssl-express-www": "^3.0.8"
   }
 }
