--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "frameguard": "^3.1.0",
     "fs": "0.0.1-security",
+    "googleapis": "^92.0.0",
     "nodemailer": "^6.4.17",
     "path": "^0.12.7",
     "ssl-express-www": "^3.0.8"
